[package]
name = "glium_learn"
version = "0.1.0"
authors = ["Ship <shiplet@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
image = "*"
reqwest = "0.10.9"
serde = { "version" = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }