[package]
name = "dss_shiplet"
version = "0.1.0"
authors = ["Ship <shiplet@protonmail.com>"]
edition = "2018"

[dependencies]
glium = "0.28"
glium-glyph = "0.9.0"
image = "*"
reqwest = { "version" = "0.10.9", features = ["blocking"]}
serde = { "version" = "1.0", features = ["derive"] }
serde_json = "1.0"
